rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct TransactionMut {} TransactionMut;
typedef struct YUndoManager {} YUndoManager;
typedef struct YSubscription {} YSubscription;
typedef YDoc YDoc;
typedef Branch Branch;
typedef struct YOutput {
  int8_t tag;
  uint32_t len;
  union YOutputContent value;
} YOutput;
typedef YSubscription YSubscription;
typedef struct YAfterTransactionEvent {
  struct YStateVector before_state;
  struct YStateVector after_state;
  struct YDeleteSet delete_set;
} YAfterTransactionEvent;
typedef struct YSubdocsEvent {
  uint32_t added_len;
  uint32_t removed_len;
  uint32_t loaded_len;
  YDoc **added;
  YDoc **removed;
  YDoc **loaded;
} YSubdocsEvent;
typedef struct YTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YTextEvent;
typedef struct YMapEvent {
  const void *inner;
  const TransactionMut *txn;
} YMapEvent;
typedef struct YArrayEvent {
  const void *inner;
  const TransactionMut *txn;
} YArrayEvent;
typedef struct YXmlEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlEvent;
typedef struct YXmlTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlTextEvent;
typedef struct YWeakLinkEvent {
  const void *inner;
  const TransactionMut *txn;
} YWeakLinkEvent;
typedef struct YEvent {
  int8_t tag;
  union YEventContent content;
} YEvent;
typedef union YPathSegmentCase {
  const char *key;
  uint32_t index;
} YPathSegmentCase;
typedef struct YPathSegment {
  char tag;
  union YPathSegmentCase value;
} YPathSegment;
typedef struct YDeltaAttr {
  const char *key;
  struct YOutput value;
} YDeltaAttr;
typedef struct YDeltaOut {
  uint8_t tag;
  uint32_t len;
  uint32_t attributes_len;
  struct YDeltaAttr *attributes;
  struct YOutput *insert;
} YDeltaOut;
typedef struct YEventChange {
  uint8_t tag;
  uint32_t len;
  const struct YOutput *values;
} YEventChange;
typedef struct YEventKeyChange {
  const char *key;
  char tag;
  const struct YOutput *old_value;
  const struct YOutput *new_value;
} YEventKeyChange;
typedef struct YUndoManagerOptions {
  int32_t capture_timeout_millis;
} YUndoManagerOptions;
typedef struct YUndoEvent {
  char kind;
  const char *origin;
  uint32_t origin_len;
  void *meta;
} YUndoEvent;
YSubscription *ydoc_observe_updates_v1(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_updates_v2(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_after_transaction(YDoc *doc,
                                              void *state,
                                              void (*cb)(void*, struct YAfterTransactionEvent*));
YSubscription *ydoc_observe_subdocs(YDoc *doc,
                                    void *state,
                                    void (*cb)(void*, struct YSubdocsEvent*));
YSubscription *ydoc_observe_clear(YDoc *doc, void *state, void (*cb)(void*, YDoc*));
YSubscription *ytext_observe(const Branch *txt, void *state, void (*cb)(void*,
                                                                        const struct YTextEvent*,
                                                                        uint32_t,
                                                                        const char*));
YSubscription *ymap_observe(const Branch *map, void *state, void (*cb)(void*,
                                                                       const struct YMapEvent*));
YSubscription *yarray_observe(const Branch *array,
                              void *state,
                              void (*cb)(void*, const struct YArrayEvent*));
YSubscription *yxmlelem_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlEvent*));
YSubscription *yxmltext_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlTextEvent*));
YSubscription *yobserve_deep(Branch *ytype, void *state, void (*cb)(void*,
                                                                    uint32_t,
                                                                    const struct YEvent*));
Branch *yarray_event_target(const struct YArrayEvent *e);
struct YPathSegment *yxmlelem_event_path(const struct YXmlEvent *e, uint32_t *len);
struct YPathSegment *yxmltext_event_path(const struct YXmlTextEvent *e, uint32_t *len);
struct YPathSegment *yarray_event_path(const struct YArrayEvent *e, uint32_t *len);
void ypath_destroy(struct YPathSegment *path, uint32_t len);
struct YDeltaOut *ytext_event_delta(const struct YTextEvent *e, uint32_t *len);
struct YDeltaOut *yxmltext_event_delta(const struct YXmlTextEvent *e, uint32_t *len);
struct YEventChange *yarray_event_delta(const struct YArrayEvent *e, uint32_t *len);
struct YEventChange *yxmlelem_event_delta(const struct YXmlEvent *e, uint32_t *len);
void ytext_delta_destroy(struct YDeltaOut *delta, uint32_t len);
void yevent_delta_destroy(struct YEventChange *delta, uint32_t len);
struct YEventKeyChange *ymap_event_keys(const struct YMapEvent *e, uint32_t *len);
struct YEventKeyChange *yxmlelem_event_keys(const struct YXmlEvent *e, uint32_t *len);
struct YEventKeyChange *yxmltext_event_keys(const struct YXmlTextEvent *e, uint32_t *len);
void yevent_keys_destroy(struct YEventKeyChange *keys, uint32_t len);
YUndoManager *yundo_manager(const YDoc *doc, const struct YUndoManagerOptions *options);
void yundo_manager_destroy(YUndoManager *mgr);
void yundo_manager_add_origin(YUndoManager *mgr, uint32_t origin_len, const char *origin);
void yundo_manager_remove_origin(YUndoManager *mgr, uint32_t origin_len, const char *origin);
void yundo_manager_add_scope(YUndoManager *mgr, const Branch *ytype);
void yundo_manager_clear(YUndoManager *mgr);
void yundo_manager_stop(YUndoManager *mgr);
YSubscription *yundo_manager_observe_added(YUndoManager *mgr,
                                           void *state,
                                           void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yundo_manager_observe_popped(YUndoManager *mgr,
                                            void *state,
                                            void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yweak_observe(const Branch *weak,
                             void *state,
                             void (*cb)(void*, const struct YWeakLinkEvent*));