lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Returns a path from a root type down to a current shared collection (which can be obtained using
/// `yxmlelem_event_path` function). It can consist of either integer indexes (used by sequence
/// components) of *char keys (used by map components). `len` output parameter is used to provide
/// information about length of the path.
///
/// Path returned this way should be eventually released using `ypath_destroy`.
@ffi.Native<
        ffi.Pointer<YPathSegment> Function(
            ffi.Pointer<YXmlEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yxmlelem_event_path', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YPathSegment> yxmlelem_event_path(
  ffi.Pointer<YXmlEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a path from a root type down to a current shared collection (which can be obtained using
/// `yxmltext_event_path` function). It can consist of either integer indexes (used by sequence
/// components) of *char keys (used by map components). `len` output parameter is used to provide
/// information about length of the path.
///
/// Path returned this way should be eventually released using `ypath_destroy`.
@ffi.Native<
        ffi.Pointer<YPathSegment> Function(
            ffi.Pointer<YXmlTextEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yxmltext_event_path', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YPathSegment> yxmltext_event_path(
  ffi.Pointer<YXmlTextEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a path from a root type down to a current shared collection (which can be obtained using
/// `yarray_event_target` function). It can consist of either integer indexes (used by sequence
/// components) of *char keys (used by map components). `len` output parameter is used to provide
/// information about length of the path.
///
/// Path returned this way should be eventually released using `ypath_destroy`.
@ffi.Native<
        ffi.Pointer<YPathSegment> Function(
            ffi.Pointer<YArrayEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yarray_event_path', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YPathSegment> yarray_event_path(
  ffi.Pointer<YArrayEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Releases allocated memory used by objects returned from path accessor functions of shared type
/// events.
@ffi.Native<ffi.Void Function(ffi.Pointer<YPathSegment>, ffi.Uint32)>(
    symbol: 'ypath_destroy', assetId: 'package:y_dart/y_dart')
external void ypath_destroy(
  ffi.Pointer<YPathSegment> path,
  int len,
);

/// Returns a sequence of changes produced by sequence component of shared collections (such as
/// `YText`, `YXmlText` and XML nodes added to `YXmlElement`). `len` output parameter is used to
/// provide information about number of changes produced.
///
/// Delta returned from this function should eventually be released using `yevent_delta_destroy`
/// function.
@ffi.Native<
        ffi.Pointer<YDeltaOut> Function(
            ffi.Pointer<YTextEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytext_event_delta', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YDeltaOut> ytext_event_delta(
  ffi.Pointer<YTextEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a sequence of changes produced by sequence component of shared collections (such as
/// `YText`, `YXmlText` and XML nodes added to `YXmlElement`). `len` output parameter is used to
/// provide information about number of changes produced.
///
/// Delta returned from this function should eventually be released using `yevent_delta_destroy`
/// function.
@ffi.Native<
        ffi.Pointer<YDeltaOut> Function(
            ffi.Pointer<YXmlTextEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yxmltext_event_delta', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YDeltaOut> yxmltext_event_delta(
  ffi.Pointer<YXmlTextEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a sequence of changes produced by sequence component of shared collections (such as
/// `YText`, `YXmlText` and XML nodes added to `YXmlElement`). `len` output parameter is used to
/// provide information about number of changes produced.
///
/// Delta returned from this function should eventually be released using `yevent_delta_destroy`
/// function.
@ffi.Native<
        ffi.Pointer<YEventChange> Function(
            ffi.Pointer<YArrayEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yarray_event_delta', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YEventChange> yarray_event_delta(
  ffi.Pointer<YArrayEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a sequence of changes produced by sequence component of shared collections (such as
/// `YText`, `YXmlText` and XML nodes added to `YXmlElement`). `len` output parameter is used to
/// provide information about number of changes produced.
///
/// Delta returned from this function should eventually be released using `yevent_delta_destroy`
/// function.
@ffi.Native<
        ffi.Pointer<YEventChange> Function(
            ffi.Pointer<YXmlEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yxmlelem_event_delta', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YEventChange> yxmlelem_event_delta(
  ffi.Pointer<YXmlEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Releases memory allocated by the object returned from `yevent_delta` function.
@ffi.Native<ffi.Void Function(ffi.Pointer<YDeltaOut>, ffi.Uint32)>(
    symbol: 'ytext_delta_destroy', assetId: 'package:y_dart/y_dart')
external void ytext_delta_destroy(
  ffi.Pointer<YDeltaOut> delta,
  int len,
);

/// Releases memory allocated by the object returned from `yevent_delta` function.
@ffi.Native<ffi.Void Function(ffi.Pointer<YEventChange>, ffi.Uint32)>(
    symbol: 'yevent_delta_destroy', assetId: 'package:y_dart/y_dart')
external void yevent_delta_destroy(
  ffi.Pointer<YEventChange> delta,
  int len,
);

/// Returns a sequence of changes produced by map component of shared collections (such as
/// `YMap` and `YXmlText`/`YXmlElement` attribute changes). `len` output parameter is used to
/// provide information about number of changes produced.
///
/// Delta returned from this function should eventually be released using `yevent_keys_destroy`
/// function.
@ffi.Native<
        ffi.Pointer<YEventKeyChange> Function(
            ffi.Pointer<YMapEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ymap_event_keys', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YEventKeyChange> ymap_event_keys(
  ffi.Pointer<YMapEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a sequence of changes produced by map component of shared collections.
/// `len` output parameter is used to provide information about number of changes produced.
///
/// Delta returned from this function should eventually be released using `yevent_keys_destroy`
/// function.
@ffi.Native<
        ffi.Pointer<YEventKeyChange> Function(
            ffi.Pointer<YXmlEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yxmlelem_event_keys', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YEventKeyChange> yxmlelem_event_keys(
  ffi.Pointer<YXmlEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a sequence of changes produced by map component of shared collections.
/// `len` output parameter is used to provide information about number of changes produced.
///
/// Delta returned from this function should eventually be released using `yevent_keys_destroy`
/// function.
@ffi.Native<
        ffi.Pointer<YEventKeyChange> Function(
            ffi.Pointer<YXmlTextEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'yxmltext_event_keys', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YEventKeyChange> yxmltext_event_keys(
  ffi.Pointer<YXmlTextEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Releases memory allocated by the object returned from `yxml_event_keys` and `ymap_event_keys`
/// functions.
@ffi.Native<ffi.Void Function(ffi.Pointer<YEventKeyChange>, ffi.Uint32)>(
    symbol: 'yevent_keys_destroy', assetId: 'package:y_dart/y_dart')
external void yevent_keys_destroy(
  ffi.Pointer<YEventKeyChange> keys,
  int len,
);

/// Creates a new instance of undo manager bound to a current `doc`. It can be used to track
/// specific shared refs via `yundo_manager_add_scope` and updates coming from specific origin
/// - like ability to undo/redo operations originating only at the local peer - by using
/// `yundo_manager_add_origin`.
///
/// This object can be deallocated via `yundo_manager_destroy`.
@ffi.Native<
        ffi.Pointer<YUndoManager> Function(
            ffi.Pointer<YDoc>, ffi.Pointer<YUndoManagerOptions>)>(
    symbol: 'yundo_manager', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YUndoManager> yundo_manager(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<YUndoManagerOptions> options,
);

/// Deallocated undo manager instance created via `yundo_manager`.
@ffi.Native<ffi.Void Function(ffi.Pointer<YUndoManager>)>(
    symbol: 'yundo_manager_destroy', assetId: 'package:y_dart/y_dart')
external void yundo_manager_destroy(
  ffi.Pointer<YUndoManager> mgr,
);

/// Adds an origin to be tracked by current undo manager. This way only changes made within context
/// of transactions created with specific origin will be subjects of undo/redo operations. This is
/// useful when you want to be able to revert changed done by specific user without reverting
/// changes made by other users that were applied in the meantime.
@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<YUndoManager>, ffi.Uint32, ffi.Pointer<ffi.Char>)>(
    symbol: 'yundo_manager_add_origin', assetId: 'package:y_dart/y_dart')
external void yundo_manager_add_origin(
  ffi.Pointer<YUndoManager> mgr,
  int origin_len,
  ffi.Pointer<ffi.Char> origin,
);

/// Removes an origin previously added to undo manager via `yundo_manager_add_origin`.
@ffi.Native<
        ffi.Void Function(
            ffi.Pointer<YUndoManager>, ffi.Uint32, ffi.Pointer<ffi.Char>)>(
    symbol: 'yundo_manager_remove_origin', assetId: 'package:y_dart/y_dart')
external void yundo_manager_remove_origin(
  ffi.Pointer<YUndoManager> mgr,
  int origin_len,
  ffi.Pointer<ffi.Char> origin,
);

/// Add specific shared type to be tracked by this instance of an undo manager.
@ffi.Native<ffi.Void Function(ffi.Pointer<YUndoManager>, ffi.Pointer<Branch>)>(
    symbol: 'yundo_manager_add_scope', assetId: 'package:y_dart/y_dart')
external void yundo_manager_add_scope(
  ffi.Pointer<YUndoManager> mgr,
  ffi.Pointer<Branch> ytype,
);

/// Removes all the undo/redo stack changes tracked by current undo manager. This also cleans up
/// all the items that couldn't be deallocated / garbage collected for the sake of possible
/// undo/redo operations.
///
/// Keep in mind that this function call requires that underlying document store is not concurrently
/// modified by other read-write transaction. This is done by acquiring the read-only transaction
/// itself. If such transaction could be acquired (because of another read-write transaction is in
/// progress, this function will hold current thread until acquisition is possible.
@ffi.Native<ffi.Void Function(ffi.Pointer<YUndoManager>)>(
    symbol: 'yundo_manager_clear', assetId: 'package:y_dart/y_dart')
external void yundo_manager_clear(
  ffi.Pointer<YUndoManager> mgr,
);

/// Cuts off tracked changes, producing a new stack item on undo stack.
///
/// By default, undo manager gathers undergoing changes together into undo stack items on periodic
/// basis (defined by `YUndoManagerOptions.capture_timeout_millis`). By calling this function, we're
/// explicitly creating a new stack item will all the changes registered since last stack item was
/// created.
@ffi.Native<ffi.Void Function(ffi.Pointer<YUndoManager>)>(
    symbol: 'yundo_manager_stop', assetId: 'package:y_dart/y_dart')
external void yundo_manager_stop(
  ffi.Pointer<YUndoManager> mgr,
);
